--- a/phase3_final.ipynb
+++ b/phase3_final.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Frame the problem and say what you want to do"
+    "### Project outline"
    ]
   },
   {
